# spotify-dashboard

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: app.py  load_tables.py  requirements.txt  transform_tables.py
